jilles      2005/09/23 13:58:19 UTC	(20050923-2317)
  Log:
  Use user_find_named() where appropriate in chanserv commands.
  

  Modified:
	trunk/modules/chanserv/ban.c (File Modified) 
	trunk/modules/chanserv/halfop.c (File Modified) 
	trunk/modules/chanserv/invite.c (File Modified) 
	trunk/modules/chanserv/kick.c (File Modified) 
	trunk/modules/chanserv/op.c (File Modified) 
	trunk/modules/chanserv/voice.c (File Modified) 
	trunk/modules/chanserv/why.c (File Modified) 


jilles      2005/09/23 13:46:06 UTC	(20050923-2315)
  Log:
  Add user_find_named(), a la ratbox find_named_person().
  This should be used to prevent users from chasing
  people via UID.
  

  Modified:
	trunk/include/extern.h (File Modified) 
	trunk/src/node.c (File Modified) 


jilles      2005/09/23 12:25:06 UTC	(20050923-2313)
  Log:
  Fix JOIN 0.
  

  Modified:
	trunk/protocol/charybdis.c (File Modified) 


jilles      2005/09/23 12:17:05 UTC	(20050923-2311)
  Log:
  TS6 fixes.
  

  Modified:
	trunk/protocol/charybdis.c (File Modified) 


nenolod     2005/09/23 04:42:15 UTC	(20050923-2309)
  Log:
  chanuser_add() was in wrong place :/

  Modified:
	trunk/protocol/charybdis.c (File Modified) 


nenolod     2005/09/23 04:38:01 UTC	(20050923-2307)
  Log:
  continuation of last commit...

  Modified:
	trunk/protocol/charybdis.c (File Modified) 


nenolod     2005/09/23 04:36:58 UTC	(20050923-2305)
  Log:
  don't block channel messages... oops

  Modified:
	trunk/protocol/charybdis.c (File Modified) 


nenolod     2005/09/23 04:30:02 UTC	(20050923-2303)
  Log:
  charybdis TS6 fixes

  Modified:
	trunk/protocol/charybdis.c (File Modified) 


nenolod     2005/09/23 04:12:31 UTC	(20050923-2301)
  Log:
  MySQL detection fixes.
  

  Modified:
	trunk/configure (File Modified) 
	trunk/configure.ac (File Modified) 


nenolod     2005/09/23 04:10:02 UTC	(20050923-2299)
  Log:
  - TS6ify charybdis protocol support.
  - Optimize m_nick() stuff in several protocol modules.