@@ -1,3 +1,12 @@
+jilles      2005/09/23 14:01:26 UTC	(20050923-2319)
+  Log:
+  Correct error message on /cs invite of nonexistent nick.
+  
+
+  Modified:
+	trunk/modules/chanserv/invite.c (File Modified) 
+
+
 jilles      2005/09/23 13:58:19 UTC	(20050923-2317)
   Log:
   Use user_find_named() where appropriate in chanserv commands.
